# scratch

./: .coveragerc  .envrc  .gitattributes  .gitignore  .pre-commit-config.example  .pre-commit-config.yaml  Dockerfile  Justfile  Makefile  README.md  api_overview.drawio  convert_matlab_results.py  debug_boundary.py  debug_candidate_search.py  debug_candidates.py  debug_compare.py  debug_edge.py  debug_edge2.py  debug_filter.py  debug_filter_compare.py  debug_full_alignment.py  debug_landscape.py  debug_nan_locations.py  debug_nonanout.py  debug_optimizer_detail.py  debug_optimizer_trace.py  debug_resample_compare.py  debug_scales.py  debug_scipy_nm.py  debug_trace.py  debug_trace2.py  devenv.nix  devenv.yaml  docker-compose.yaml  flake.nix  pyproject.toml  release_notes.txt
.github/ISSUE_TEMPLATE/: refactor.yml  translation.yml
.github/actions/build-api/: action.yml
.github/actions/setup-devenv/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: main.yml  manual_build.yml  release.yaml  release.yml
lrmodule/: data.py  lrsystem.py  models.py  persistence.py
lrmodule/mcmc/: breech_face_impression-cmc-all-input.csv  config.yaml  firing_pin_impression-cmc-all-input.csv  firing_pin_impression-cmc-km_logp.csv  firing_pin_impression-cmc-km_parameter_samples.csv  firing_pin_impression-cmc-km_parameters.csv  firing_pin_impression-cmc-knm_logp.csv  firing_pin_impression-cmc-knm_parameter_stats.csv  firing_pin_impression-cmc-knm_parameters.csv  firing_pin_impression-cmc-llr_unbound.csv  lr_analyses.py  mcmc.py  test_mcmc.py
scripts/: comparison_utils.py  conversion_utils.py  convert_marks.py  convert_matlab_results.py  convert_scores.py  convert_x3ps.py  http_utils.py  matlab_utils.py
src/: constants.py  dependencies.py  file_services.py  helpers.py  main.py  models.py  pipelines.py  response_models.py  routers.py  schemas.py  settings.py
src/add_scan/: router.py  schemas.py
src/api/: __main__.py
src/api/comparison/: router.py  schema.py
src/api/processing/: router.py
src/api/scans/: router.py  schema.py
src/common/: __init__.py  data_types.py
src/comparators/: router.py
src/extractors/: __init__.py  constants.py  helpers.py  router.py  schemas.py
src/parsers/: __init__.py  base.py  data_types.py  x3p.py
src/parsers/patches/: al3d.py
src/pre_processors/: pre-procces.drawio  router.py  schemas.py
src/preprocessors/: __init__.py  constants.py  controller.py  exceptions.py  helpers.py  models.py  new_pipelines.py  pipelines.py  router.py  schemas.py
src/processors/: constants.py  controller.py  router.py  schemas.py
src/scratch_core/common/plots/: surfaceplot.m
src/scripts/: convert_matlab_results.py
tests/: api.http  conftest.py  helper_function.py  helper_functions.py  routers.http  test_contracts.py  test_convert_matlab_results.py  test_file_services.py  test_generate_description.py  test_main.py  test_models.py  test_parsers.py  test_pipelines.py  test_settings.py  test_temp_dir.py
tests/add_scan/: test_router.py  test_schemas.py
tests/comparators/: test_router.py
tests/extractors/router/: test_file_endpoint.py  test_router.py
tests/extractors/schemas/: test_base_response_urls.py  test_image_access.py  test_process_data_urls.py  test_processed_data_access.py  test_validators.py
tests/pre_processors/: test_router.py  test_schemas.py
tests/pre_processors/schemas/: test_process_scan.py  test_upload_scan.py
tests/preprocessors/: conftest.py  test_helpers.py  test_router.py
tests/preprocessors/controller/: test_apply_changes_on_scan_image.py
tests/preprocessors/new_pipelines/: conftest.py  test_parse_scan_pipeline.py  test_surface_map_pipeline.py
tests/preprocessors/pipelines/: conftest.py  test_parse_mask_pipeline.py  test_parse_scan_pipeline.py  test_preview_pipeline.py  test_surface_map_pipeline.py  test_x3p_pipeline.py
tests/preprocessors/router/: conftest.py  test_file_endpoint.py  test_process_scan.py  test_router.py
tests/preprocessors/schemas/: conftest.py  test_edit_image.py  test_edit_image_parameters.py  test_mask.py  test_process_data_urls.py  test_process_scan.py  test_processed_data_location.py  test_schemas.py  test_upload_scan.py  test_upload_scan_parameters.py
tests/processors/: conftest.py  test_controller.py  test_router.py  test_schemas.py
tests/processors/resources/: lr_systems.py  random_lr_system.pkl
tests/processors/schemas/: test_schemas.py
tests/resources/scans/: circle.x3p
tests/resources/striation/: model.pkl  reference_data.csv
tests/scripts/: test_convert_matlab_results.py
