[project]
name = "scratch"
version = "0.0.1"
description = "Scratch"
authors = [
  { name = "Netherlands Forensic Institute - CFS R&D Data", email = "cfs_rd_data@nfi.nl" },
  { name = "Sharlon N. Regales", email = "s.regales@nfi.nl" },
  { name = "Raymond Houwing", email = "r.houwing@nfi.nl" },
]
readme = "README.md"
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)',
]

requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
]

# https://docs.astral.sh/uv/concepts/projects/workspaces/
[tool.uv.sources]
scratch-core = { workspace = true }
stats = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "deptry>=0.23.1",
  "diff-cover>=9.7.1",
  "ipykernel>=7.0.0",
  "pre-commit>=4.3.0",
  "pyinstaller>=6.16.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "requests>=2.32.5",
  "ruff>=0.14.0",
  "rust-just>=1.43.0",
  "ty>=0.0.1a22",
]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
  "I",   # isort
  "NPY", # numpy specific rules
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "N",   # pep8-naming
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "PL",  # pylint
  "S",   # flake8-bandit
  "PT",  # flake8-pytest-style
]
ignore = [
  'D100',    # no module docstring required at top of each file
  'D101',    # no class docstring required (only in __init__)
  'D104',    # no docstring in __init__.py of public package required
  'D105',    # no docstring in magic methods (like __eq__) required, since they are not class dependent
  'PLE0604', # no restriction on having only strings in __all__ definitions
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"            # docstring type to use
ignore-decorators = ["property"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = [
  "S101",  # Exclude the 'use of assert' warning in the test files
  "D103",  # No docstring necessary for tests
  "PT011", # No `match` parameter necessary for pytest.raises
]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "packages/**/tests"]
addopts = [
  "--import-mode=importlib",
  "--cov-config=pyproject.toml",
  "--cov-report=term",
]
markers = [
  "integration: Tests related to more than one unit (examples: modules, interfaces)",
  "e2e: End to end test (full system test)",
  "contract_testing: all tests used for checking if the interface to the outside is same as contract",
]

[tool.coverage.report]
fail_under = 80
skip_empty = true
skip_covered = true
show_missing = true
omit = ["src/main.py"]

[tool.coverage.run]
branch = true
source = [
  "src",
  "packages/stats/src",
  "packages/scratch-core/src",
]
omit = ["src/main.py"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
